<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp">

    <!-- CAPA -->
    <ImageView
        android:id="@+id/imgCapaCadastro"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_music_note"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_card_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- NOME -->
    <EditText
        android:id="@+id/edtNomeMusica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_musica"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/imgCapaCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- ARTISTA -->
    <EditText
        android:id="@+id/edtArtista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_artista"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtNomeMusica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- GÊNERO -->
    <EditText
        android:id="@+id/edtGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_genero"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtArtista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- DESCRIÇÃO -->
    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao"
        android:minLines="3"
        android:gravity="top"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- BOTÃO ESCOLHER ÁUDIO -->
    <Button
        android:id="@+id/btnSelecionarAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_selecionar_audio"
        app:layout_constraintTop_toBottomOf="@id/edtDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- SALVAR -->
    <Button
        android:id="@+id/btnSalvarMusica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar_musica"
        app:layout_constraintTop_toBottomOf="@id/btnSelecionarAudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- VOLTAR -->
    <Button
        android:id="@+id/btnVoltarCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        app:layout_constraintTop_toBottomOf="@id/btnSalvarMusica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
