<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Spofity"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/spotifyGreen"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botão Tema -->
    <Button
        android:id="@+id/btnTema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_tema"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnIdioma"
        app:layout_constraintWidth_percent="0.48"
        android:layout_marginTop="12dp" />

    <!-- Botão Idioma -->
    <Button
        android:id="@+id/btnIdioma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_idioma"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toEndOf="@id/btnTema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.48"
        android:layout_marginTop="12dp" />

    <!-- Botão Adicionar Música -->
    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_music"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnTema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtFiltro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/filtrar"
        android:inputType="text"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAdicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Lista -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewMusicas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/edtFiltro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
